--- a/_tools.function-underline.scss
+++ b/_tools.function-underline.scss
@@ -10,13 +10,13 @@ If you set the variable in ems, be carefull. Firefox doesn't like dimensions <1p
 @mixin underline {...}
 ```
 */
-@mixin underline ($underline-color: #333, $position: 1px, $width: 1px, $background-color: #ffffff, $cut-distance: $width) {
+@mixin underline ($underline-color: #333, $underline-position: 1px, $underline-width: 1px, $underline-background-color: #ffffff, $cut-distance: $underline-width) {
 
   // remove classic underline
   text-decoration: none;
 
   // the underline
-  background: linear-gradient(to top, $background-color, $background-color $position, $underline-color $position, $underline-color $position+$width, $background-color $position+$width);
+  background: linear-gradient(to top, $underline-background-color, $underline-background-color $underline-position, $underline-color $underline-position, $underline-color $underline-position+$underline-width, $underline-background-color $underline-position+$underline-width);
 
   // text-shadow
   // why so much ?! -> http://dsh.re/14297
@@ -24,14 +24,14 @@ If you set the variable in ems, be carefull. Firefox doesn't like dimensions <1p
   $all: ();
   @for $i from 1 through $precision {
     $distance: $cut-distance*$i/$precision;
-    $all: append($all, 0 $distance 0 $background-color, comma);
-    $all: append($all, 0 (-$distance) 0 $background-color, comma);
-    $all: append($all, $distance 0 0 $background-color, comma);
-    $all: append($all, (-$distance) 0 0 $background-color, comma);
-    $all: append($all, (-$distance) (-$distance) 0 $background-color,comma);
-    $all: append($all, (-$distance) $distance 0 $background-color,comma);
-    $all: append($all, $distance (-$distance) 0 $background-color,comma);
-    $all: append($all, $distance $distance 0 $background-color,comma);
+    $all: append($all, 0 $distance 0 $underline-background-color, comma);
+    $all: append($all, 0 (-$distance) 0 $underline-background-color, comma);
+    $all: append($all, $distance 0 0 $underline-background-color, comma);
+    $all: append($all, (-$distance) 0 0 $underline-background-color, comma);
+    $all: append($all, (-$distance) (-$distance) 0 $underline-background-color,comma);
+    $all: append($all, (-$distance) $distance 0 $underline-background-color,comma);
+    $all: append($all, $distance (-$distance) 0 $underline-background-color,comma);
+    $all: append($all, $distance $distance 0 $underline-background-color,comma);
   }
   text-shadow: $all;
 }
