remove text-color variable
the only color we need to know is underline-color

--- a/_componment.underline.scss
+++ b/_componment.underline.scss
@@ -9,8 +9,7 @@
 // Predefine the variables below in order to alter and enable specific features.
 $inuit-underline-namespace:   $inuit-namespace !default;
 
-$underline-text-color:        $inuit-base-text-color !default;
-$underline-color:             $underline-text-color !default;
+$underline-color:             $inuit-base-text-color !default;
 $underline-position:          1px !default;
 $underline-width:             1px !default;
 $underline-background-color:  $inuit-base-background-color !default;
