set default mixin variables

--- a/_componment.underline.scss
+++ b/_componment.underline.scss
@@ -13,6 +13,7 @@ $underline-color:             $inuit-base-text-color !default;
 $underline-position:          1px !default;
 $underline-width:             1px !default;
 $underline-background-color:  $inuit-base-background-color !default;
+
 $underline-link-color:        #ff0000 !default;
 $underline-link-color--hover: $underline-text-color !default;
 
@@ -20,7 +21,7 @@ $underline-link-color--hover: $underline-text-color !default;
 
 
 // Underline mixin
-@mixin underline ($underline-color: #333, $underline-position: 1px, $underline-width: 1px, $underline-background-color: #ffffff, $underline-shadow-width: $underline-width) {
+@mixin underline ($underline-color: $underline-color, $underline-position: $underline-position, $underline-width: $underline-width, $underline-background-color: $underline-background-color, $underline-shadow-width: $underline-width) {
 
   // remove classic underline
   text-decoration: none;
