--- a/_componment.underline.scss
+++ b/_componment.underline.scss
@@ -16,7 +16,7 @@ $underline-background-color:  $inuit-base-background-color !default;
 
 $links-underlined:            true !default;
 $underline-link-color:        #ff0000 !default;
-$underline-link-color--hover: $underline-text-color !default;
+$underline-link-color--hover: $underline-color !default;
 
 
 
@@ -58,7 +58,7 @@ $underline-link-color--hover: $underline-text-color !default;
  */
 .#{$inuit-underline-namespace}underline,
 %#{$inuit-underline-namespace}underline {
-  color: $underline-text-color;
+  color: $underline-color;
   @include underline();
 }
 
