--- a/_componment.underline.scss
+++ b/_componment.underline.scss
@@ -2,6 +2,8 @@
     #UNDERLINE COMPONENT
 \*------------------------------------*/
 
+// Include this files if you want/need an `.underline` class.
+
 
 
 
