--- a/test/test.scss
+++ b/test/test.scss
@@ -3,4 +3,4 @@
 @import '../settings.underline';
 @import '../tools.mixins-underline';
 @import '../base.links-underline';
-@import '../componment.underline';
+@import '../components.underline';
