--- a/_settings.underline.scss
+++ b/_settings.underline.scss
@@ -9,7 +9,9 @@
 // Predefine the variables below in order to alter and enable specific features.
 $inuit-underline-namespace:   $inuit-namespace !default;
 
+$underline-base-font-size:    $inuit-base-font-size !default;
 $underline-color:             $inuit-base-text-color !default;
 $underline-position:          1px !default;
+$underline-width:             0.001em;
 $underline-width:             1px !default;
 $underline-background-color:  $inuit-base-background-color !default;
