--- a/_tools.mixins-underline.scss
+++ b/_tools.mixins-underline.scss
@@ -41,13 +41,21 @@
   @for $i from 1 through $precision {
     $distance: $underline-shadow-width * $i / $precision;
 
+    // top
     $all: append($all,           0    $distance  0 $underline-background-color, comma);
+    // bottom
     $all: append($all,           0  (-$distance) 0 $underline-background-color, comma);
+    // right
     $all: append($all,   $distance            0  0 $underline-background-color, comma);
+    // left
     $all: append($all, (-$distance)           0  0 $underline-background-color, comma);
+    // bottom left
     $all: append($all, (-$distance) (-$distance) 0 $underline-background-color, comma);
+    // top left
     $all: append($all, (-$distance)   $distance  0 $underline-background-color, comma);
+    // bottom right
     $all: append($all,   $distance  (-$distance) 0 $underline-background-color, comma);
+    // top right
     $all: append($all,   $distance    $distance  0 $underline-background-color, comma);
   }
   text-shadow: $all;
